# jakes-blog

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/blog/: index.md
docs/blog/posts/: .authors.md  putting-a-site-on-cf.md
docs/javascripts/: oneko.js
